@@ -7,6 +7,11 @@ use warnings;
 # this test was generated with
 # Dist::Zilla::Plugin::Author::SKIRMESS::RepositoryBase 0.012
 
+use Test::More;
 use Test::CleanNamespaces;
+
+if ( !Test::CleanNamespaces->find_modules() ) {
+    plan skip_all => 'No files found to test.';
+}
 
 all_namespaces_clean();
