@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS
 
 {{$NEXT}}
 
+  - Test::CleanNamespaces failes if there are no files to check
+
 0.012  2017-09-14 19:16:33 UTC
 
   - The VERSION in the pod must be the version of the project, not of the
